# leaf

./: .gitattributes  .gitignore  Cargo.toml  ORGANIZATION_SUMMARY.md  bash.exe.stackdump  final_test.rs  manual_test.rs  quick_test.rs  sh.exe.stackdump  simple_duplicates_all.csv  simple_test.rs  simple_verify.rs  test_core.rs  test_correct_pattern.csv  test_data_blocks_1k.csv  test_delta.rs  test_duplicate_blocks.csv  test_duplicate_groups.csv  test_time_bin.rs  test_time_grouping.rs  todo.md  verify_time_grouping.rs
data_gen_scripts/: DATASET_SUMMARY.md  README.md  TEST_DATA_300K_README.md  analyze_datasets.py  generate_test_data.py  test_data_300k.csv  validate_test_data.py
docs/: DUPLICATE_DETECTION_UPDATE.md  DUPLICATE_REMOVAL_SCRIPTS.md  LEAF_COMPREHENSIVE_TEST_CHECKLIST.md  PROJECT_ORGANIZATION.md  fix_issues.md
docs/architecture/: CODEBASE_OVERVIEW.md  (+6 more)
scripts/: README.md  SESSION_ACCOMPLISHMENTS.md  analyze_correct_duplicates.py  analyze_datasets.py  analyze_duplicate_blocks.py  dataset_statistics.md  debug_duplicate_detection.py  generate_test_data.py  generate_test_data_correct.py  generate_test_data_fixed.py  remove_duplicate_groups.py  test_dataset_simple.py  test_duplicate_blocks.py  test_duplicate_detection_300k.py  test_duplicate_detection_300k_correct.py  test_duplicate_detection_proper.py  test_major_group_duplicates.py  updated_test_data_format.md  validate_dataset_comprehensive.py
src/: main.rs
test_data/: TEST_DATA_GENERATION_SUMMARY.md  datetime_timestamps.csv  gaps_data.csv  iso_timestamps.csv  mixed_types.csv  numeric_test.csv  time_only.csv  time_series_gaps.csv  time_test.csv  unix_timestamps.csv
(+33 files in other folders)
