[package]
name = "leaf"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.29"
egui = "0.29"
egui_extras = { version = "0.29", features = ["image"] }
egui_plot = "0.29"
image = { version = "0.25", features = ["png"] }
rfd = "0.15"
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
dirs = "5.0"
datafusion = { version = "39.0", features = ["pyarrow"] }
arrow = { version = "=51.0.0", default-features = false, features = ["ipc"] }
chrono = { version = "=0.4.39", default-features = false }
tokio = { version = "1.0", features = ["full"] }
indexmap = "2.10.0"
rand = "0.9.1"

# GPU acceleration dependencies
wgpu = "0.20"
winit = "0.30"
glam = "0.27"
bytemuck = { version = "1.15", features = ["derive"] }
pollster = "0.3"



[[bin]]
name = "test_time_grouping"
path = "test_time_grouping.rs"

[[bin]]
name = "simple_test"
path = "simple_test.rs"

[[bin]]
name = "test_time_bin"
path = "test_time_bin.rs"

[[bin]]
name = "manual_test"
path = "manual_test.rs"

[[bin]]
name = "test_core"
path = "test_core.rs"

[[bin]]
name = "verify_time_grouping"
path = "verify_time_grouping.rs"

[[bin]]
name = "simple_verify"
path = "simple_verify.rs"

[[bin]]
name = "final_test"
path = "final_test.rs"

[[bin]]
name = "quick_test"
path = "quick_test.rs"

[[bin]]
name = "test_time_grouping"
path = "test_time_grouping.rs"

[[bin]]
name = "verify_time_grouping"
path = "verify_time_grouping.rs"

[[bin]]
name = "simple_verify"
path = "simple_verify.rs"

[profile.release]
opt-level = 3
lto = true 
